@@ -76,6 +76,13 @@ def processIncludes(includes, env, target, source):
     return [env.Dir(i).abspath for i in
             SCons.PathList.PathList(includes).subst_path(env, target, source)]
 
+def processFlags(flags, env):
+    # If /std:c++XX is in flags then we need to ensure /Zc:__cplusplus is in
+    # flags to tell intellisense to respect our specified standard
+    if any(f.startswith('/std:c++') for f in flags) and \
+       not any(f == '/Zc:__cplusplus' for f in flags):
+        flags.append('/Zc:__cplusplus')
+    return [env.subst(f) for f in flags]
 
 external_makefile_guid = '{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}'
 
@@ -508,6 +515,10 @@ class _DSPGenerator(object):
             cpppaths = GetKeyFromEnv(env, 'cpppaths', variants)
         else:
             cpppaths = [env.get('CPPPATH', [])] * len(variants)
+        if 'cppflags' in env:
+            cppflags = GetKeyFromEnv(env, 'cppflags', variants)
+        else:
+            cppflags = [env.get('CCFLAGS', []) + env.get('CXXFLAGS', []) + env.get('CPPFLAGS', [])] * len(variants)
 
         self.env = env
 
@@ -550,12 +561,13 @@ class _DSPGenerator(object):
         for n in sourcenames:
             self.sources[n].sort(key=lambda a: a.lower())
 
-        def AddConfig(self, variant, buildtarget, outdir, runfile, cmdargs, cppdefines, cpppaths, dspfile=dspfile, env=env):
+        def AddConfig(self, variant, buildtarget, outdir, runfile, cmdargs, cppdefines, cpppaths, cppflags, dspfile=dspfile, env=env):
             config = Config()
             config.buildtarget = buildtarget
             config.outdir = outdir
             config.cmdargs = cmdargs
             config.cppdefines = cppdefines
+            config.cppflags = cppflags
             config.runfile = runfile
 
             # Dir objects can't be pickled, so we need an absolute path here.
@@ -573,7 +585,7 @@ class _DSPGenerator(object):
             print("Adding '" + self.name + ' - ' + config.variant + '|' + config.platform + "' to '" + str(dspfile) + "'")
 
         for i in range(len(variants)):
-            AddConfig(self, variants[i], buildtarget[i], outdir[i], runfile[i], cmdargs[i], cppdefines[i], cpppaths[i])
+            AddConfig(self, variants[i], buildtarget[i], outdir[i], runfile[i], cmdargs[i], cppdefines[i], cpppaths[i], cppflags[i])
 
         seen = set()
         self.platforms = [p.platform for p in self.configs.values()
@@ -1144,6 +1156,7 @@ V10DSPCommandLine = """\
 \t\t<NMakeForcedIncludes Condition="'$(Configuration)|$(Platform)'=='%(variant)s|%(platform)s'">$(NMakeForcedIncludes)</NMakeForcedIncludes>
 \t\t<NMakeAssemblySearchPath Condition="'$(Configuration)|$(Platform)'=='%(variant)s|%(platform)s'">$(NMakeAssemblySearchPath)</NMakeAssemblySearchPath>
 \t\t<NMakeForcedUsingAssemblies Condition="'$(Configuration)|$(Platform)'=='%(variant)s|%(platform)s'">$(NMakeForcedUsingAssemblies)</NMakeForcedUsingAssemblies>
+\t\t<AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='%(variant)s|%(platform)s'">%(additionaloptions)s</AdditionalOptions>
 """
 
 V15DSPHeader = """\
@@ -1243,6 +1256,7 @@ class _GenerateV10DSP(_DSPGenerator, _GenerateV10User):
             cmdargs = self.configs[kind].cmdargs
             cpppaths = self.configs[kind].cpppaths
             cppdefines = self.configs[kind].cppdefines
+            cppflags = self.configs[kind].cppflags
 
             env_has_buildtarget = 'MSVSBUILDTARGET' in self.env
             if not env_has_buildtarget:
@@ -1262,6 +1276,7 @@ class _GenerateV10DSP(_DSPGenerator, _GenerateV10User):
             # assumes they don't.
             preprocdefs = xmlify(';'.join(processDefines(cppdefines)))
             includepath = xmlify(';'.join(processIncludes(cpppaths, self.env, None, None)))
+            additionaloptions = xmlify(' '.join(processFlags(cppflags, self.env)))
 
             if not env_has_buildtarget:
                 del self.env['MSVSBUILDTARGET']
